@@ -160,7 +160,13 @@ CP=`echo $LIB_FOLDER/slf4j-log4j12-1.6.2.jar $LIB_FOLDER/datastore_server.jar $L
     | sed 's/ /:/g'`
 
 CMD="${JAVA_BIN}"
-COMMON_OPTIONS="${JAVA_OPTS} ${JAVA_MEM_OPTS} -Dnative.libpath=$LIB_FOLDER/native -classpath $CP ch.systemsx.cisd.openbis.dss.generic.DataStoreServer"
+version=$("${CMD}" -version 2>&1 | awk -F '"' '/version/ {print $2}'| cut -c1-3)
+JAVA_VERSION_OPTS=""
+if [[ "$version" != "1.8" ]]; then
+    JAVA_VERSION_OPTS="--add-exports java.xml/jdk.xml.internal=ALL-UNNAMED"
+fi
+COMMON_OPTIONS="${JAVA_OPTS} ${JAVA_MEM_OPTS} $JAVA_VERSION_OPTS -Dnative.libpath=$LIB_FOLDER/native -classpath $CP ch.systemsx.cisd.openbis.dss.generic.DataStoreServer"
+
 
 # ensure that we ignore a possible prefix "--" for any command 
 command="${command#--*}"
